Added demo text and modified header.

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -14,8 +14,8 @@
   <header>
   <nav class="nav-bar">
     <img class="logo" src="/images/Logo.png" alt="DM Burgers Logo">
-    <button>
-
-    </button>
-    <nav>
+    <div>
+    <button type="button" class="btn btn-danger">Order Now</button>
+    </div>
+    </nav>
   </header>
