--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,10 @@
 <% include partials/_header %>
 
   <body>
-    <h1>Hello World!</h1>
+  <div>
+  <img class="home-image" src="/images/Main-Page-Photo.jpg" alt="Customers sharing burger experience.">
+  <p class="home-content">Bacon ipsum dolor amet prosciutto brisket ribeye drumstick landjaeger. Turkey pork chop capicola short loin. Fatback spare ribs turducken porchetta hamburger shank. Brisket tri-tip doner flank. Sausage shoulder spare ribs prosciutto, ribeye beef ribs andouille porchetta hamburger tri-tip capicola ground round boudin ham.
+  </p>
+  </div>
   </body>
 </html>
