Style adjustments and some structure changes.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,16 @@
 <% include partials/_header %>
 
   <body>
-  <div>
+  <section class="home-content">
   <img class="home-image" src="/images/Main-Page-Photo.jpg" alt="Customers sharing burger experience.">
-  <p class="home-content">Bacon ipsum dolor amet prosciutto brisket ribeye drumstick landjaeger. Turkey pork chop capicola short loin. Fatback spare ribs turducken porchetta hamburger shank. Brisket tri-tip doner flank. Sausage shoulder spare ribs prosciutto, ribeye beef ribs andouille porchetta hamburger tri-tip capicola ground round boudin ham.
+  <p>Bacon ipsum dolor amet prosciutto brisket ribeye drumstick landjaeger. Turkey pork chop capicola short loin. Fatback spare ribs turducken porchetta hamburger shank. Brisket tri-tip doner flank. Sausage shoulder spare ribs prosciutto, ribeye beef ribs andouille porchetta hamburger tri-tip capicola ground round boudin ham.
   </p>
-  </div>
+  <p>
+  Chuck meatloaf kielbasa, corned beef turkey sausage pork belly andouille pork chop burgdoggen swine. Sausage hamburger t-bone prosciutto corned beef chicken. Turducken tenderloin shoulder doner ham hock.
+  </p>
+  </section>
+  <section class="button-prompt">
+  <button type="button" class="btn btn-danger btn-lg btn-block">Order Now!</button>
+  </section>
   </body>
 </html>
