--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -14,7 +14,7 @@
   <header>
   <nav class="nav-bar">
     <img class="logo" src="/images/Logo.png" alt="DM Burgers Logo">
-    <div>
+    <div class="order-button">
     <button type="button" class="btn btn-danger">Order Now</button>
     </div>
     </nav>
