--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -9,11 +9,19 @@
   <body>
 
 
-  <div class="row-menu-layout">
+  <div class="row">
     <div class="col">
-        <img src="/public/images-Mar/burger1.jpg" alt="burger images">
-        <p>lorem</p>
-        <p>some text here - description of meal</p>
+      1 of 3
+    </div>
+    <div class="col">
+      2 of 3
+    </div>
+    <div class="col">
+      3 of 3
+    </div>
+    <div class ="w-100"></div>
+    <div class="col">
+      1 of 3
     </div>
     <div class="col">
       2 of 3
@@ -22,6 +30,8 @@
       3 of 3
     </div>
   </div>
+
+
 
 
 
