Small code change to message.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,6 @@
 <% include partials/_header %>
-
+<br>
+<br>
   <body>
   <section class="home-content">
   <img class="home-image" src="/images/Main-Page-Photo.jpg" alt="Customers sharing burger experience.">
@@ -10,7 +11,7 @@
   </p>
   </section>
   <section class="button-prompt">
-  <button type="button" class="btn btn-danger btn-lg btn-block">Order Now!</button>
+  <button type="button" class="btn btn-dark btn-lg btn-block">Order Now!</button>
   </section>
   </body>
 </html>
