--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -1,6 +1,6 @@
 body {
   background-color: #EEE;
-  font-size: 2vw;
+  font-size: 1em;
 
   h1 {
     color: #244751;
@@ -8,19 +8,23 @@ body {
 }
 
 .logo {
-  width: 6em;
-  height: 6em;
+  width: 5em;
+  height: 5em;
 }
 
-.nav-bar {
-  display: flex;
-  width: 100%;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  margin-left: 1em;
-  margin-right: 1em;
-}
+// .nav-bar {
+//   display: flex;
+//   width: 100%;
+//   flex-direction: row;
+//   justify-content: space-between;
+//   align-items: center;
+//   margin-left: 1em;
+//   margin-right: 1em;
+// }
+
+// header {
+  // color: white;
+// }
 
 .home-image {
   max-width: 60%;
@@ -30,6 +34,7 @@ body {
 }
 
 .home-content {
+  margin-top: 1em;
   margin-right: 1em;
   margin-left: 1em;
 }
