--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -12,10 +12,17 @@
   </head>
 
   <header>
-  <nav class="nav-bar">
-    <img class="logo" src="/images/Logo.png" alt="DM Burgers Logo">
-    <div class="order-button">
-    <button type="button" class="btn btn-danger">Order Now</button>
+  <nav class="navbar fixed-top navbar-expand-md navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">Logo</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" href="#">About Us</a>
+      <a class="nav-item nav-link" href="#">Contact</a>
     </div>
-    </nav>
+  </div>
+</nav>
   </header>
