--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -1,8 +1,51 @@
 <% include partials/_header %>
-
-<body>
-
-
-
-</body>
+<br>
+<br>
+<h1>Your order:</h1>
+<h4>Please fill out the below form to complete your order.</h4>
+<form class="order-form">
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <input type="text" class="form-control" id="inputFirstName" placeholder="First name">
+    </div>
+    <div class="form-group col-md-6">
+      <input type="text" class="form-control" id="inputLastName" placeholder="Last name">
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="inputAddress">Address</label>
+    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+  </div>
+  <div class="form-group">
+    <label for="inputAddress2">Address 2</label>
+    <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+  </div>
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <label for="inputCity">City</label>
+      <input type="text" class="form-control" id="inputCity">
+    </div>
+    <div class="form-group col-md-4">
+      <label for="inputProvince">Province</label>
+      <select id="inputProvince" class="form-control">
+        <option selected>Choose...</option>
+        <option>Alberta</option>
+        <option>British Columbia</option>
+        <option>Manitoba</option>
+        <option>New Bruinswick</option>
+        <option>Newfoundland</option>
+        <option>Nova Scotia</option>
+        <option>Ontario</option>
+        <option>Prince Edward Island</option>
+        <option>Quebec</option>
+        <option>Saskatchewan</option>
+      </select>
+    </div>
+    <div class="form-group col-md-2">
+      <label for="inputPostal">Postal Code</label>
+      <input type="text" class="form-control" id="inputPostal">
+    </div>
+  </div>
+  <button type="submit" class="btn btn-dark">Submit Order</button>
+</form>
 </html>
