--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -1,33 +1,37 @@
 <% include partials/_header %>
 <br>
 <br>
+<div class="order-text">
 <h1>Your order:</h1>
 <h4>Please fill out the below form to complete your order.</h4>
-<form class="order-form">
+</div>
+<form class="order-form" action="/orders" method="POST">
   <div class="form-row">
     <div class="form-group col-md-6">
-      <input type="text" class="form-control" id="inputFirstName" placeholder="First name">
+      <input type="text" class="form-control" id="inputFirstName" name="firstName" placeholder="First name">
     </div>
     <div class="form-group col-md-6">
-      <input type="text" class="form-control" id="inputLastName" placeholder="Last name">
+      <input type="text" class="form-control" id="inputLastName" name="lastName" placeholder="Last name">
     </div>
   </div>
-  <div class="form-group">
-    <label for="inputAddress">Address</label>
-    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+  <div class="form-row">
+  <div class="form-group col-md-6">
+    <label for="inputAddress">Street Number</label>
+    <input type="text" class="form-control" id="inputAddress" name="streetNumber">
   </div>
-  <div class="form-group">
-    <label for="inputAddress2">Address 2</label>
-    <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+  <div class="form-group col-md-6">
+    <label for="inputAddress2">Street Name</label>
+    <input type="text" class="form-control" id="inputAddress2" name="streetName">
+  </div>
   </div>
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="inputCity">City</label>
-      <input type="text" class="form-control" id="inputCity">
+      <input type="text" class="form-control" name="city" id="inputCity">
     </div>
     <div class="form-group col-md-4">
       <label for="inputProvince">Province</label>
-      <select id="inputProvince" class="form-control">
+      <select id="inputProvince" name="province" class="form-control">
         <option selected>Choose...</option>
         <option>Alberta</option>
         <option>British Columbia</option>
@@ -43,7 +47,7 @@
     </div>
     <div class="form-group col-md-2">
       <label for="inputPostal">Postal Code</label>
-      <input type="text" class="form-control" id="inputPostal">
+      <input type="text" class="form-control" name="postalCode" id="inputPostal">
     </div>
   </div>
   <button type="submit" class="btn btn-dark">Submit Order</button>
