--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -19,7 +19,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" href="#">About Us</a>
       <a class="nav-item nav-link" href="#">Contact</a>
     </div>
