--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -1,6 +1,26 @@
 <% include partials/_header %>
-<br>
-<br>
+
+<div class="modal fade" id="submitModal" tabindex="-1" role="dialog" aria-labelledby="submitModalTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="submitModalLongTitle">Thank You, <span class="order-name"></span>!</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="order-confirmation-text">
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-dark" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-dark">Return Home</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="order-text">
 <h1>Your order:</h1>
 <h4>Please fill out the below form to complete your order.</h4>
@@ -15,7 +35,7 @@
     </div>
   </div>
   <div class="form-row">
-  <div class="form-group col-md-6">
+  <div class="form-group col-md-2">
     <label for="inputAddress">Street Number</label>
     <input type="text" class="form-control" id="inputAddress" name="streetNumber">
   </div>
@@ -23,6 +43,10 @@
     <label for="inputAddress2">Street Name</label>
     <input type="text" class="form-control" id="inputAddress2" name="streetName">
   </div>
+  <div class="form-group col-md-4">
+  <label for="inputPhoneNumber">Phone Number</label>
+  <input type="text" class="form-control" id="inputPhoneNumber" name="phoneNumber" placeholder="Please enter as XXX-XXXX">
+</div>
   </div>
   <div class="form-row">
     <div class="form-group col-md-6">
@@ -50,6 +74,6 @@
       <input type="text" class="form-control" name="postalCode" id="inputPostal">
     </div>
   </div>
-  <button type="submit" class="btn btn-dark">Submit Order</button>
-</form>
-</html>
+  <button type="submit" class="btn btn-dark" data-toggle="modal" data-target="#submitModal">Submit Order</button>
+  </form>
+</html> 
