--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -11,6 +11,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
 
   <header>
@@ -25,6 +26,10 @@
       <a class="nav-item nav-link" href="#">About Us</a>
       <a class="nav-item nav-link" href="#">Contact</a>
     </div>
+    <div class="collapse navbar-collapse">
+    <a class="nav-item nav-link" href="/orders">
+      <i class="material-icons">shopping_cart</i>
+      </a>
   </div>
 </nav>
   </header>
