Added some CSS for the cart icon.

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -53,3 +53,29 @@ body {
   font-size: 0.8em;
   margin-top: 3em;
 }
+
+.badge-secondary {
+  color: #fff;
+  background-color: #6c757d;
+}
+
+.badge-pill {
+  padding-right: .6em;
+  padding-left: .6em;
+  border-radius: 10rem;
+}
+
+.badge {
+  display: inline-block;
+  padding: .25em .4em;
+  font-size: 100%;
+  font-weight: 700;
+  line-height: 1;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+}
+
+.material-icons {
+  color: white;
+}
