--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -1,5 +1,10 @@
 <% include partials/_header %>
 
+<br>
+<br>
+<br>
+
+<!-- Hidden modal -->
 <div class="modal fade" id="submitModal" tabindex="-1" role="dialog" aria-labelledby="submitModalTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
@@ -21,8 +26,52 @@
   </div>
 </div>
 
-<div class="order-text">
-<h1>Your order:</h1>
+<!-- Your Order Summary Box-->
+<div class="col-md-6 order-md-1 mb-4">
+    <h1 class="d-flex justify-content-between align-items-center mb-3">
+      <span>Your Cart</span>
+      <span class="badge badge-secondary badge-pill">3</span>
+    </h1>
+    <ul class="list-group mb-3">
+            <li class="list-group-item d-flex justify-content-between lh-condensed">
+              <div>
+                <h6 class="my-0">El Luchador Burger</h6>
+              </div>
+              <div>
+              <h6 class="my-0">Qty: 1</h6>
+              </div>
+              <span class="text-muted">$8.25</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between lh-condensed">
+              <div>
+                <h6 class="my-0">The Green Burger</h6>
+              </div>
+              <div>
+              <h6 class="my-0">Qty: 2</h6>
+              </div>
+              <span class="text-muted">$14.50</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between lh-condensed">
+              <div>
+                <h6 class="my-0">Chop House Burger</h6>
+              </div>
+              <div>
+              <h6 class="my-0">Qty: 1</h6>
+              </div>
+              <span class="text-muted">$6.50</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between">
+            <span>Taxes (CAD)</span>
+            <span class="text-muted">$X.XX</span>
+          </li>
+            <li class="list-group-item d-flex justify-content-between">
+              <span><strong>Total (CAD)</strong></span>
+              <strong>$20.00</strong>
+            </li>
+          </ul>
+</div>
+
+<div class="container">
 <h4>Please fill out the below form to complete your order.</h4>
 </div>
 <form class="order-form" action="/orders" method="POST">
