--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,9 @@
   </p>
   </section>
   <section class="button-prompt">
-  <button type="button" class="btn btn-dark btn-lg btn-block">Order Now!</button>
+  <form method="GET" action="/dishes">
+  <button type="submit" class="btn btn-dark btn-lg btn-block">Order Now!</button>
+  </form>
   </section>
   </body>
 </html>
