--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -3,7 +3,7 @@
 <br>
 
 
-<p class="text-center m-1">Burgers</p>
+<p class="text-center m-3">Burgers</p>
 <p class="text-center">100% all-natural Angus beef. No hormones and no antibiotics ever. Served on a non-GMO potato bun.</p>
 <div class="container m-2 mx-auto">
   <div class="row w-100">
@@ -11,27 +11,23 @@
 
     <!-- Modal -->
     <div class="modal fade" id="dish-<%=dish.id%>" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLongTitle"><%=dish.name%></h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body"><%=dish.description%></div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-dark col-xs-5">Add to Cart</button>
-            </div>
-
-            <!--Below three lines are plus/minus button-->
-          <div class="quantity buttons_added">
-            <input type="button" value="-" class="minus">
-            <input type="number" step="1" min="1" max="" name="quantity" value="1" title="Qty" class="input-text qty text" size="4" pattern="" inputmode="">
-            <input type="button" value="+" class="plus">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLongTitle"><%=dish.name%></h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
           </div>
+        <div class="modal-body"><%=dish.description%></div>
+        <div class="modal-footer">
+          <input type="number" class="quantity-button"  min="0" max="20">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-dark col-xs-5">Add to Cart</button>
         </div>
+
+        <!--Below three lines are plus/minus button-->
+
       </div>
     </div>
   </div>
@@ -40,7 +36,7 @@
       <div class="col-md-3 m-1 rounded text-center" style="border: solid 1px grey" >
         <div class="imageTextBox">
           <!-- <img class="menu-image img-thumbnail rounded " src="<%=dish.image%>"> -->
-          <div class="burger_header" style="background-image:url(<%=dish.image%>)"></div>
+          <div class="burger_header img-thumbnail m-1" style="background-image:url(<%=dish.image%>)"></div>
           <span><%=dish.name%></span>
           <div class="font-weight-lighter" ><%=dish.description%></div>
           <div>$<%=dish.price%></div>
