--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -20,14 +20,15 @@
             </button>
           </div>
         <div class="modal-body"><%=dish.description%></div>
+        <div class="modal-body">$<%=dish.price%></div>
         <div class="modal-footer">
-          <input type="number" class="quantity-button"  min="0" max="20">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-dark col-xs-5">Add to Cart</button>
+          <form action= "/cart" method="POST">
+            <input type="number" class="quantity-button"  name="qty" min="0" max="20">
+            <input type="hidden" name="dishId" value="<%=dish.id%>">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-dark col-xs-5">Add to Cart</button>
+          </form>
         </div>
-
-        <!--Below three lines are plus/minus button-->
-
       </div>
     </div>
   </div>
