Modified cart icon to correctly link to the cart page.

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -27,7 +27,7 @@
       <a class="nav-item nav-link" href="#">Contact</a>
     </div>
     <div class="collapse navbar-collapse">
-    <a id="order-confirmation" class="nav-item nav-link" href="/orders">
+    <a id="order-confirmation" class="nav-item nav-link" href="/cart">
       <i class="material-icons">shopping_cart</i>
       </a>
   </div>
