--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -26,40 +26,25 @@
   </div>
 </div>
 
-<!-- Your Order Summary Box-->
+<!-- Your Cart Summary -->
 <div class="col-md-6 order-md-1 mb-4">
     <h1 class="d-flex justify-content-between align-items-center mb-3">
       <span>Your Cart</span>
       <span class="badge badge-secondary badge-pill">3</span>
     </h1>
     <ul class="list-group mb-3">
+        <%cart.forEach( item => {%>
             <li class="list-group-item d-flex justify-content-between lh-condensed">
               <div>
-                <h6 class="my-0">El Luchador Burger</h6>
+                <h6 class="my-0"><%=item.name%></h6>
               </div>
               <div>
-              <h6 class="my-0">Qty: 1</h6>
+              <h6 class="my-0">Qty :<%=item.quantity%></h6>
               </div>
-              <span class="text-muted">$8.25</span>
+              <span class="text-muted">$<%=item.price%></span>
             </li>
-            <li class="list-group-item d-flex justify-content-between lh-condensed">
-              <div>
-                <h6 class="my-0">The Green Burger</h6>
-              </div>
-              <div>
-              <h6 class="my-0">Qty: 2</h6>
-              </div>
-              <span class="text-muted">$14.50</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between lh-condensed">
-              <div>
-                <h6 class="my-0">Chop House Burger</h6>
-              </div>
-              <div>
-              <h6 class="my-0">Qty: 1</h6>
-              </div>
-              <span class="text-muted">$6.50</span>
-            </li>
+        <%})%>
+
             <li class="list-group-item d-flex justify-content-between">
             <span>Taxes (CAD)</span>
             <span class="text-muted">$X.XX</span>
@@ -71,6 +56,7 @@
           </ul>
 </div>
 
+<!-- Order confirmation form -->
 <div class="container">
 <h4>Please fill out the below form to complete your order.</h4>
 </div>
