--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -27,6 +27,7 @@
 </div>
 
 <!-- Your Cart Summary -->
+<% if (cart.length >= 1) { %>
 <div class="col-md-6 order-md-1 mb-4">
     <h1 class="d-flex justify-content-between align-items-center mb-3">
       <span>Your Cart</span>
@@ -34,7 +35,7 @@
       <% cart.forEach( item => { %>
       <% totalQuantity += item.quantity; %>
       <% }) %>
-      <span class="badge badge-secondary badge-pill"><%=totalQuantity%></span>
+      <span class="badge badge-dark badge-pill"><%=totalQuantity%></span>
     </h1>
     <ul class="list-group mb-3">
         <% cart.forEach( item => { %>
@@ -123,4 +124,16 @@
   </div>
   <button type="submit" class="btn btn-dark" data-toggle="modal" data-target="#submitModal">Submit Order</button>
   </form>
-</html> 
+
+  <% } else { %>
+  <div class="row mt-2 rounded text-center justify-content-center">
+  <div class="card" style="width: 20rem;">
+  <img class="card-img-top" src="https://wavenetdelivery.ordering.co/templates/web/img/empty-cart.png" alt="Card image cap">
+    <h5 class="card-title">Your cart is empty!</h5>
+    <p class="card-text">Please add some delicious burgers from our menu page!</p>
+    <a href="/dishes" class="btn btn-dark">Menu</a>
+  </div>
+</div>
+</div>
+  <% } %>
+</html>
