--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -22,9 +22,9 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="#">About Us</a>
-      <a class="nav-item nav-link" href="#">Contact</a>
+      <a class="nav-item nav-link active" href="/">Home</a>
+      <a class="nav-item nav-link active" href="/dishes">Menu</a>
+      <a class="nav-item nav-link active" href="#">Contact</a>
     </div>
     <div class="collapse navbar-collapse">
     <a id="order-confirmation" class="nav-item nav-link" href="/cart">
