--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,23 +2,24 @@
 <br>
 <br>
   <body>
-  <div id="carouselExampleSlidesOnly" class="carousel slide " data-ride="carousel">
+
+
+  <section class="home-content">
+  <div id="carouselExampleSlidesOnly" class="carousel-slide " data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
         <img src="/images/Main-Page-Photo.jpg" class="d-block w-100" alt="friends around a table eating burgers">
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="/images/lunchbrunch.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="/images/Main-Page-Photo.jpg" class="d-block w-100" alt="...">
+      <img src="/images/meanbite.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
 </div>
 
-
-  <section class="home-content">
-  <img class="home-image" src="/images/Main-Page-Photo.jpg" alt="Customers sharing burger experience.">
+<!--  <img class="home-image" src="/images/Main-Page-Photo.jpg" alt="Customers sharing burger experience."> TESTING REMOVED FIRST LOOK-->
   <p>Bacon ipsum dolor amet prosciutto brisket ribeye drumstick landjaeger. Turkey pork chop capicola short loin. Fatback spare ribs turducken porchetta hamburger shank. Brisket tri-tip doner flank. Sausage shoulder spare ribs prosciutto, ribeye beef ribs andouille porchetta hamburger tri-tip capicola ground round boudin ham.
   </p>
   <p>
