--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -3,6 +3,7 @@
 <br>
 
 
+
 <p class="text-center m-3">Burgers</p>
 <p class="text-center">100% all-natural Angus beef. No hormones and no antibiotics ever. Served on a non-GMO potato bun.</p>
 <div class="container m-2 mx-auto">
@@ -34,6 +35,8 @@
   </div>
 
 
+
+
       <div class="col-md-3 mx-3 my-4 rounded text-center min-w-260" style="border: solid 1px grey" >
         <div class="imageTextBox">
           <!-- <img class="menu-image img-thumbnail rounded " src="<%=dish.image%>"> -->
@@ -45,6 +48,27 @@
         </div>
       </div>
     <%})%>
+  </div>
+</div>
+
+<!-- TOAST OPTION this will advise the customer that their items  have been added to cart -->
+
+<!-- Flexbox container for aligning the toasts -->
+<div id="submit-toast" aria-live="polite" aria-atomic="true" class="d-flex justify-content-center align-items-center" style="min-height: 200px;">
+
+  <!-- Then put toasts within -->
+  <div  class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast-header">
+      <img src="..." class="rounded mr-2" alt="...">
+      <strong class="mr-auto">Bootstrap</strong>
+      <small>11 mins ago</small>
+      <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="toast-body">
+      Hello, world! This is a toast message.
+    </div>
   </div>
 </div>
 
