--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -28,6 +28,7 @@
 
 <!-- Your Cart Summary -->
 <% if (cart.length >= 1) { %>
+<div class="row mt-2 rounded text-center justify-content-center">
 <div class="col-md-6 order-md-1 mb-4">
     <h1 class="d-flex justify-content-between align-items-center mb-3">
       <span>Your Cart</span>
@@ -68,9 +69,10 @@
             </li>
           </ul>
 </div>
+</div>
 
 <!-- Order confirmation form -->
-<div class="container">
+<div class="row mt-2 rounded text-center justify-content-center">
 <h4>Please fill out the below form to complete your order.</h4>
 </div>
 <form class="order-form" action="/orders" method="POST">
@@ -125,6 +127,7 @@
   <button type="submit" class="btn btn-dark" data-toggle="modal" data-target="#submitModal">Submit Order</button>
   </form>
 
+  <!-- Shows the user an empty cart if they have not selected anything from the menu. -->
   <% } else { %>
   <div class="row mt-2 rounded text-center justify-content-center">
   <div class="card" style="width: 20rem;">
