--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -23,7 +23,7 @@
               </button>
             </div>
           <div class="modal-body"><%=dish.description%></div>
-          <div class="modal-body">$<%=dish.price%></div>
+          <div class="modal-body">$<%=dish.price.toFixed(2)%></div>
           <div class="modal-footer">
             <form action= "/cart" method="POST" class="add-to-cart-form">
               <input type="number" class="quantity-button"  name="qty" min="1" max="20" value="1">
@@ -45,7 +45,7 @@
             <div class="burger_header img-thumbnail m-1" style="background-image:url(<%=dish.image%>)"></div>
             <span><%=dish.name%></span>
             <div class="font-weight-lighter" ><%=dish.description%></div>
-            <div>$<%=dish.price%></div>
+            <div>$<%=dish.price.toFixed(2)%></div>
             <div><button type="button" class="btn btn-dark col-xs-5" data-toggle="modal" data-target="#dish-<%=dish.id%>">Select</button></div>
           </div>
         </div>
