--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -1,76 +1,92 @@
-<%include partials/_header%>
-<br>
-<br>
+<!DOCTYPE html>
+<html>
 
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Bootstrap 101: Learn Bootstrap in 60 minutes by Bootstrapious.com</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="all,follow">
+    <!-- Bootstrap CSS-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+    <!-- Custom stylesheet - for your changes-->
+    <link rel="stylesheet" href="css/custom.css">
+    <!-- Tweaks for older IEs-->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
+</head>
 
+<body>
 
-<p class="text-center m-3">Burgers</p>
-<p class="text-center">100% all-natural Angus beef. No hormones and no antibiotics ever. Served on a non-GMO potato bun.</p>
-<div class="container m-2 mx-auto">
-  <div class="row w-100 justify-content-center">
-    <%dishes.forEach(dish => {%>
+    <!-- Burgers Layout -->
+  <section class="bg-light">
+  <div class="container">
+    <h2>Burgers</h2>
+    <p class="lead text-muted mb-5">Bacon ipsum dolor amet cupim turducken cow kielbasa capicola t-bone. Tail turducken tri-tip alcatra, drumstick strip steak cow pork loin leberkas tongue pancetta beef. Bacon pork chop tail pastrami ribeye alcatra bresaola ground round shankle venison boudin brisket picanha kevin. Short ribs picanha t-bone sirloin, pancetta biltong kielbasa brisket cow beef ribs. Ground round pancetta rump strip steak venison. Frankfurter flank beef ribs, pastrami shankle beef chicken ham hock tri-tip doner fatback turkey. Buffalo meatball ball tip tri-tip turducken short ribs beef ribs sirloin ham ground round biltong pancetta chicken bacon.</p>
+    <div class="row">
+      <%dishes.forEach(dish => {%>
+      <div class="col-md-4 mb-4">
+        <div class="card shadow border-0 h-100"><a href="#"><img src="<%=dish.image%>" alt="" class="card-img-top"></a>
+          <div class="card-body">
+              <h5><%=dish.name%></h5>
+              <p class="text-muted card-text"><%=dish.description%></p>
+                <p class="card-text">$<%=dish.price.toFixed(2)%> <button type="button" class="btn btn-dark col-xs-5" data-toggle="modal" data-target="#dish-<%=dish.id%>">Select</button> </p>
+          </div>
+        </div>
+      </div>
+      <!-- Modal -->
+      <div class="modal fade" id="dish-<%=dish.id%>" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLongTitle"><%=dish.name%></h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body"><%=dish.description%></div>
+            <div class="modal-body">$<%=dish.price.toFixed(2)%></div>
+            <div class="modal-footer">
+              <form action= "/cart" method="POST" class="add-to-cart-form">
+                <input type="number" class="quantity-button"  name="qty" min="1" max="20" value="1">
+                <input type="hidden" name="dishId" value="<%=dish.id%>">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="submit" class="btn btn-dark col-xs-5" data-toggle="modal" data-target="#dish-<%=dish.id%>">Add to Cart</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+      <%})%>
+    </div>
+    </section>
 
-    <!-- Modal -->
-    <div class="modal fade" id="dish-<%=dish.id%>" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLongTitle"><%=dish.name%></h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+    <!-- TOAST OPTION -->
+    <div id="submit-toast" aria-live="polite" aria-atomic="true" class="d-flex justify-content-center align-items-center" style="min-height: 200px;">
+
+    <!-- Then put toasts within -->
+    <div  class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+          <img src="..." class="rounded mr-2" alt="...">
+          <strong class="mr-auto">Bootstrap</strong>
+            <small>11 mins ago</small>
+            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-        <div class="modal-body"><%=dish.description%></div>
-        <div class="modal-body">$<%=dish.price%></div>
-        <div class="modal-footer">
-          <form action= "/cart" method="POST" class="add-to-cart-form">
-            <input type="number" class="quantity-button"  name="qty" min="1" max="20" value="1">
-            <input type="hidden" name="dishId" value="<%=dish.id%>">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="submit" class="btn btn-dark col-xs-5" data-toggle="modal" data-target="#dish-<%=dish.id%>">Add to Cart</button>
-          </form>
+          <div class="toast-body">
+            Hello, world! This is a toast message.
+          </div>
         </div>
       </div>
-    </div>
-  </div>
 
 
 
 
-      <div class="col-md-3 mx-3 my-4 rounded text-center min-w-260" style="border: solid 1px grey" >
-        <div class="imageTextBox">
-          <!-- <img class="menu-image img-thumbnail rounded " src="<%=dish.image%>"> -->
-          <div class="burger_header img-thumbnail m-1" style="background-image:url(<%=dish.image%>)"></div>
-          <span><%=dish.name%></span>
-          <div class="font-weight-lighter" ><%=dish.description%></div>
-          <div>$<%=dish.price%></div>
-          <div><button type="button" class="btn btn-dark col-xs-5" data-toggle="modal" data-target="#dish-<%=dish.id%>">Select</button></div>
-        </div>
-      </div>
-    <%})%>
-  </div>
-</div>
-
-<!-- TOAST OPTION this will advise the customer that their items  have been added to cart -->
-
-<!-- Flexbox container for aligning the toasts -->
-<div id="submit-toast" aria-live="polite" aria-atomic="true" class="d-flex justify-content-center align-items-center" style="min-height: 200px;">
-
-  <!-- Then put toasts within -->
-  <div  class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-    <div class="toast-header">
-      <img src="..." class="rounded mr-2" alt="...">
-      <strong class="mr-auto">Bootstrap</strong>
-      <small>11 mins ago</small>
-      <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div class="toast-body">
-      Hello, world! This is a toast message.
-    </div>
-  </div>
-</div>
-
-</body>
+    <!-- JavaScript files-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
