--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -125,4 +125,5 @@
   </div>
   <button type="submit" class="btn btn-dark" data-toggle="modal" data-target="#submitModal">Submit Order</button>
   </form>
-</html> 
+</html>
+<%include partials/_footer%>
