created/modified footer

--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,38 +1,25 @@
 <!-- Footer-->
-<div class="py-4 bg-info">
-<div class="container">
-  <div class="row">
-    <div class="col-lg-4 mb-4 mb-lg-0">
-      <h5 class="text-white">DM Burgers</h5>
-      <ul class="contact-info list-unstyled">
-        <li><a href="mailto:marlondlc@me.com" class="text-white">hello@dmBurgers.com</a></li>
-        <li><a href="tel:514-321-1234" class="text-white">514-321-1234</a></li>
-      </ul>
+<div class="py-4 bg-dark">
+  <div class="container">
+    <div class="row justify-content-space-between">
+      <div class="col-lg-4 mb-4 mb-lg-0">
+      <h5 class="text-white">Contact Us</h5>
+       <h6 class="text-white">DM Burgers</h6>
+       <ul class="contact-info list-unstyled">
+         <li><a href="mailto:marlondlc@me.com" class="text-white">hello@dmBurgers.com</a></li>
+         <li><a href="tel:514-321-1234" class="text-white">514-321-1234</a></li>
+       </ul>
       </div>
-    <div class="col-lg-4 col-md-6">
-      <h5 class="text-white">Address</h5>
-      <p class="text-white">1345 main street <br> Montreal, Qc <br> H2E 5W1 <br> Canada</p>
-
-    </div>
-    <div class="col-lg-4 col-md-6">
-      <h5 class="text-white">Pages</h5> <!-- ADD OUR PAGE LINKS-->
-      <ul class="links list-unstyled">
-        <li> <a href="#" class="text-muted">Minim labore nulla</a></li>
-        <li> <a href="#" class="text-muted">Nulla qui nisi</a></li>
-        <li> <a href="#" class="text-muted">Iris Vor Arnim</a></li>
-        <li> <a href="#" class="text-muted">Consectetur cupidatat</a></li>
-      </ul>
+      <div class="col-lg-4 col-md-6">
+       <h5 class="text-white">Address</h5>
+        <p class="text-white">1345 main street <br> Montreal, Qc <br> H2E 5W1 <br> Canada</p>
+      </div>
+      <!-- Icons -->
+      <div class="icons-size">
+        <img src="https://img.icons8.com/clouds/100/000000/facebook-f.png">
+        <img src="https://img.icons8.com/clouds/100/000000/instagram-new.png">
+        <img src="https://img.icons8.com/clouds/100/000000/google-logo.png">
+      </div>
     </div>
   </div>
-</div>
-</div>
-<div class="py-3 bg-dark text-white">
-<div class="container">
-  <div class="row">
-    <div class="col-md-7 text-center text-md-left">
-      <p class="mb-md-0">&copy; 2018 DM BURGERS company. All rights reserved. </p>
-    </div>
-
-  </div>
-</div>
 </div>
