added css for carousel

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -118,3 +118,8 @@ justify-content: space-between;
   max-height: 4em;
 }
 
+.carousel-images {
+  width: auto;
+  height: 500px;
+  max-height: 500px;
+}
