added logo to title

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>DM Burgers</title>
+    <link rel = "icon" type = "image/png" href = "https://tbncdn.freelogodesign.org/164afac9-8074-45e9-8dd6-1ebf2bef310b.png?1554054772826">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
