--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,13 +8,16 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100"  src="/images/Main-Page-Photo.jpg" alt="First slide">
+        <img class="d-block w-100 carousel-images"  src="https://images.unsplash.com/photo-1520250868867-4428066809c3?ixlib=rb-1.2.1&auto=format&fit=crop&w=1162&q=80" alt="First slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100"  src="/images/meanbite.jpg" alt="Second slide">
+        <img class="d-block w-100 carousel-images"  src="https://images.unsplash.com/photo-1511421616335-5a9846f1afcb?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1489&q=80" alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="/images/lunchbrunch.jpg" alt="Third slide">
+        <img class="d-block w-100 carousel-images" src="https://images.unsplash.com/photo-1522036664039-3c5756c2b459?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Third slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100 carousel-images" src="https://images.unsplash.com/photo-1466978913421-dad2ebd01d17?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=967&q=80" alt="Third slide">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
