order now renamed to menu

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -24,7 +24,7 @@
       <div id="navbarSupportedContent" class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a href="#" class="nav-link">About Us</a></li>
-          <li class="nav-item"><a href="/dishes" class="nav-link">Order Now</a></li> <!-- IF NEED ADD ANOTHER LI -->
+          <li class="nav-item"><a href="/dishes" class="nav-link">Menu</a></li> <!-- IF NEED ADD ANOTHER LI -->
         </ul>
         <div class="navbar-text ml-lg-3">
           <a href="/cart" class="btn btn-dark text-white shadow"><i class="material-icons">shopping_cart</i></a>
