Slight CSS adjustments to body text.

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -1,9 +1,9 @@
 body {
   background-color: #EEE;
-  font-size: 1em;
+  font-size: 1.5em;
 
   h1 {
-    color: #244751;
+    color: #292b2c;
   }
 }
 
