Some small changes and a typo adjustment on the content.

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -2,11 +2,6 @@
 <%include partials/_header%>
 
 <body>
-  <br>
-  <br>
-
-
-
     <!-- Burgers Layout -->
   <section class="bg-light">
   <div class="container">
@@ -15,7 +10,7 @@
     <br>
     <h1 class="m-1 text-center display-2">Our Burgers</h1>
     <p class="text-center">Our flagship burgers are made with 100% high quality premium cut beef ground daily on site. No hormones or antibiotics added.</p>
-    <p class="text-center mb-5">At DM Burgers, our belief is that quality ingredients are what make a burger special. Come try our new <strong>Notorious B.I.G.</strong> burger - you won't be disappointed!</p>
+    <p class="text-center mb-5">At DM Burgers, our belief is that quality ingredients are what make a burger special. Come try our new <strong>Notorious P.I.G.</strong> burger - you won't be disappointed!</p>
     <div class="row">
       <%dishes.forEach(dish => {%>
       <div class="col-md-4 mb-4">
