Added required field to form inputs.

--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -86,34 +86,34 @@
 <form class="order-form" action="/orders" method="POST">
   <div class="form-row justify-content-center">
     <div class="form-group col-md-6">
-      <input type="text" class="form-control" id="inputFirstName" name="firstName" placeholder="First name">
+      <input type="text" class="form-control" id="inputFirstName" name="firstName" placeholder="First name" required>
     </div>
     <div class="form-group col-md-6">
-      <input type="text" class="form-control" id="inputLastName" name="lastName" placeholder="Last name">
+      <input type="text" class="form-control" id="inputLastName" name="lastName" placeholder="Last name" required>
     </div>
   </div>
   <div class="form-row justify-content-center">
   <div class="form-group col-md-2">
     <label for="inputAddress">Street Number</label>
-    <input type="text" class="form-control" id="inputAddress" name="streetNumber">
+    <input type="text" class="form-control" id="inputAddress" name="streetNumber" required>
   </div>
   <div class="form-group col-md-6">
     <label for="inputAddress2">Street Name</label>
-    <input type="text" class="form-control" id="inputAddress2" name="streetName">
+    <input type="text" class="form-control" id="inputAddress2" name="streetName" required>
   </div>
   <div class="form-group col-md-4">
   <label for="inputPhoneNumber">Phone Number</label>
-  <input type="text" class="form-control" id="inputPhoneNumber" name="phoneNumber" placeholder="(XXX)-XXX-XXXX">
+  <input type="text" class="form-control" id="inputPhoneNumber" name="phoneNumber" placeholder="(XXX)-XXX-XXXX" required>
 </div>
   </div>
   <div class="form-row">
     <div class="form-group col-md-4">
       <label for="inputCity">City</label>
-      <input type="text" class="form-control" name="city" id="inputCity">
+      <input type="text" class="form-control" name="city" id="inputCity" required>
     </div>
     <div class="form-group col-md-4">
       <label for="inputProvince">Province</label>
-      <select id="inputProvince" name="province" class="form-control">
+      <select id="inputProvince" name="province" class="form-control" required>
         <option selected>Choose...</option>
         <option>Alberta</option>
         <option>British Columbia</option>
@@ -129,7 +129,7 @@
     </div>
     <div class="form-group col-md-4">
       <label for="inputPostal">Postal Code</label>
-      <input type="text" class="form-control" name="postalCode" id="inputPostal">
+      <input type="text" class="form-control" name="postalCode" id="inputPostal" required>
       </div>
       </div>
       <button type="submit" class="btn btn-dark" data-toggle="modal" data-target="#submitModal">Submit Order</button>
