added margin empty cart

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -123,3 +123,13 @@ justify-content: space-between;
   height: 650px;
   max-height: 650px;
 }
+
+
+.margin-emepty-cart {
+  margin-top: 2.5rem;
+}
+
+.welcome-tag {
+  text-align: center;
+  vertical-align: text-bottom;
+}
